# cgm

./: .gitignore  CGMProbe.swift  Cargo.toml  Info.plist  PROTOCOL.md  README.md  aidex-to-health.shortcut  cgm.py  flake.nix  index.html  wrangler.jsonc
.cargo/: config.toml
.github/workflows/: deploy.yml
crates/cgm-core/: Cargo.toml
crates/cgm-core/src/: crypto.rs  datetime.rs  engine.rs  glucose.rs  health.rs  lib.rs  model.rs  protocol.rs  ranges.rs  stats.rs  store.rs
crates/cgm-ios/: Cargo.toml  Dioxus.toml  README.md  tailwind.css
crates/cgm-ios/assets/: tailwind.css
crates/cgm-ios/ios/: Info.plist  cgm.entitlements
crates/cgm-ios/src/: ble.rs  files.rs  health.rs  main.rs  platform.rs  storage.rs
crates/cgm-ui/: Cargo.toml
crates/cgm-ui/src/: actions.rs  format.rs  lib.rs  platform.rs  state.rs  ui.rs
crates/cgm-ui/src/components/: chart.rs  devices.rs  diagnostics.rs  dialog.rs  event_popover.rs  header.rs  health.rs  hero.rs  mod.rs  ranges.rs  settings.rs  tir.rs  toolbar.rs
crates/cgm-web/: Cargo.toml  Dioxus.toml  tailwind.css
crates/cgm-web/assets/: tailwind.css
crates/cgm-web/src/: ble.rs  files.rs  main.rs  platform.rs  storage.rs
