[package]
name = "cgm-ios"
description = "iOS app (Dioxus mobile) for the glucose reader: reads the AiDEX sensor over CoreBluetooth and writes Blood Glucose to Apple Health. Shares cgm-core + cgm-ui with the web app."
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

# NOTE: this crate builds only on macOS with the iOS SDK (CoreBluetooth +
# HealthKit). It is excluded from the root workspace so the portable crates
# build on Linux/CI. Build it with `dx serve --platform ios` on a Mac — see
# README.md.

[dependencies]
cgm-core = { path = "../cgm-core" }
cgm-ui = { path = "../cgm-ui" }
dioxus = { version = "0.7", features = ["mobile"] }
futures = "0.3"
serde_json = "1"

# Apple frameworks (only pulled in when targeting Apple platforms).
[target.'cfg(target_vendor = "apple")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = [
    "NSString",
    "NSArray",
    "NSDictionary",
    "NSData",
    "NSDate",
    "NSError",
    "NSObject",
    "NSEnumerator",
    "NSValue",
    "NSTimeZone",
    "NSURL",
    "NSFileManager",
] }
objc2-core-bluetooth = { version = "0.3", features = [
    "CBCentralManager",
    "CBPeripheral",
    "CBService",
    "CBCharacteristic",
    "CBDescriptor",
    "CBPeripheralManager",
    "CBAttribute",
    "CBUUID",
    "CBError",
] }
objc2-health-kit = { version = "0.3", features = [
    "HKHealthStore",
    "HKObjectType",
    "HKQuantityType",
    "HKQuantity",
    "HKQuantitySample",
    "HKSample",
    "HKObject",
    "HKUnit",
    "HKType",
] }
block2 = "0.6"
dispatch2 = "0.3"
