[package]
name = "cgm-ui"
description = "Shared Dioxus UI for the glucose app: components, reactive state, and platform-service traits. Renders identically on web and iOS."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
cgm-core = { workspace = true }
dioxus = { workspace = true }
